src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {

    .router-link-exact-active{
        @apply bg-teal-500;
      }

    .cs-heading {
        @apply font-heading text-4xl desktop:text-5xl md:text-5xl sm:text-4xl font-medium
    }

    .display-medium {
        @apply font-heading text-display font-medium
        
    }
    .display-medium-smaller {
        @apply font-heading text-display-smaller font-medium        
    }

    .h1-bold {
        @apply font-heading text-h1 font-bold
    }
    
    .h1-medium {
        @apply font-heading text-h1 font-medium
    }
    
    .h2-medium {
        @apply font-heading text-h2 font-medium
    }
    
    .h2-bold {
        @apply font-heading text-h2 font-bold
    }
    
    .h3-medium {
        @apply font-heading text-h3 font-medium leading-48
    }

    .h3-bold {
        @apply font-heading text-h3 font-bold leading-48
    }
    
    .h4-regular {
        @apply font-heading text-h4 font-normal leading-8
    }
    
    .h4-medium {
        @apply font-heading text-h4 font-medium leading-8
    }

    .h4-bold {
        @apply font-heading text-h4 font-bold leading-8
    }
    
    .h5-medium {
        @apply font-heading text-xl font-medium leading-6
    }

    .h5-bold {
        @apply font-heading text-xl font-bold leading-6
    }
    
    .paragraph-regular {
        @apply font-body text-base leading-6 font-normal text-gray-900 mb-4
    }
    
    .paragraph-regular-bold {
        @apply font-body text-base leading-6 font-bold text-gray-900 mb-4
    }
    
    .paragraph-regular-small {
        @apply font-body text-12.8 leading-4 font-normal text-gray-900
    }
    
    .paragraph-mobile {
        @apply font-body text-xl leading-8 font-normal text-gray-900 mb-4
    }

    .paragraph-mobile-small {
        @apply font-body text-lg leading-6 font-normal text-gray-900 mb-4
    }
    
    .subheading-regular {
        @apply font-subheading text-xl
    }

    .subheading-italic-small {
        @apply font-subheading text-base italic text-gray-900
    }
    
    .subheading-italic {
        @apply font-subheading text-xl italic text-gray-900
    }
    
    .subheading-bold {
        @apply font-subheading text-xl font-bold text-gray-900
    }

    .caption {
        @apply text-center text-sm font-body px-2 sm:px-8 desktop:p-0 mt-1
    }

    .footer-container {
        @apply grid grid-cols-2 desktop:max-w-1184 xl:max-w-5xl
    }

    .footer-column {
        @apply flex flex-col px-4 mb-4 md:px-0
    }

    .footer-column-header {
        @apply h4-bold
    }

    .footer-icon {
        @apply text-teal-500 fill-current hover:fill-current hover:text-yellow-300
    }

    .footer-regular {
        @apply font-body text-tiny
    }

    .footer-link {
        @apply font-body text-tiny font-normal underline decoration-teal-400 hover:bg-yellow-300 hover:text-gray-900 active:decoration-teal-400 hover:underline hover:decoration-gray-900 decoration-2
    }

    .nav-link {
        @apply font-subheading xl:text-xl md:text-base font-normal text-gray-900 hover:bg-yellow-300 hover:text-gray-900 active:decoration-teal-400 hover:underline decoration-gray-900 decoration-2
    }
    
    .text-link {
        @apply underline text-gray-900 decoration-teal-400 hover:bg-yellow-300 hover:text-gray-900 hover:underline hover:decoration-gray-900 active:decoration-teal-400 decoration-2
    }

    
    .btn {
        @apply h-20 w-296 xl:w-184 text-xl font-bold border-solid border-2 border-gray-900 text-gray-900 bg-teal-400 shadow-lg shadow-teal-600/30 font-body rounded-full hover:bg-yellow-300 hover:text-gray-900 hover:shadow-yellow-500/30 transition duration-200 ease-in-out active:border-teal-400 active:shadow-md active:shadow-teal-600/30
    }   

    .btn-disabled {
        @apply h-20 w-296 xl:w-184 text-xl font-bold text-gray-900 bg-gray-300 font-body rounded-md
    }
    

    li > ol,
    li > ul,
    li {
        @apply mt-2 md:mt-1
    }

.study-grid {
    @apply grid grid-cols-12 gap-4 px-4 xl:px-32 md:px-6 sm:px-4
}

td {
    @apply font-body text-base font-normal text-gray-900
}

th {
    @apply font-heading sm:text-lg text-base font-medium text-gray-900
}

a {
    @apply hover:text-yellow-400 text-gray-900
}


.form-field {
    @apply paragraph-regular bg-gray-300 rounded-md mb-8 placeholder-gray-500 px-3
}

}

